# machine_learning_projects

./: .gitignore  CMakeLists.txt  compilar.sh  install-opencv.sh
opencv/01-threshold_simple/: global.hpp  threshold_simple.cpp
opencv/02-threshold_blobs/: global.hpp  threshold_blobs.cpp
tesseract/01/: global.hpp  ocr_simple.cpp
tesseract/01-ocr_simple/: global.hpp  macros.hpp  ocr_simple.cpp
tesseract/ocr_simple/: global.hpp  ocr_simple.cpp
